Add equality and empty tests for first_contentful_paint

ksakamoto discovered that our PageLoadTiming code is missing
equality/empty tests for the first_contentful_paint field.

This means that when FCP is different from FP, and no subsequent
metrics are logged for a given page, FCP may erroneously not get
logged for that page.

BUG=632765

Review-Url: https://codereview.chromium.org/2195743002
Cr-Commit-Position: refs/heads/master@{#408674}

Former-commit-id: faa55192bc07e10058fef50dfcc3531afeef6a13