chrome/common/page_load_metrics/page_load_timing.cc
@@ -23,6 +23,7 @@ bool PageLoadTiming::operator==(const PageLoadTiming& other) const {
          first_paint == other.first_paint &&
          first_text_paint == other.first_text_paint &&
          first_image_paint == other.first_image_paint &&
+         first_contentful_paint == other.first_contentful_paint &&
          parse_start == other.parse_start && parse_stop == other.parse_stop &&
          parse_blocked_on_script_load_duration ==
              other.parse_blocked_on_script_load_duration &&
@@ -34,8 +35,8 @@ bool PageLoadTiming::IsEmpty() const {
   return navigation_start.is_null() && !response_start && !dom_loading &&
          !dom_content_loaded_event_start && !load_event_start &&
          !first_layout && !first_paint && !first_text_paint &&
-         !first_image_paint && !parse_start && !parse_stop &&
-         !parse_blocked_on_script_load_duration &&
+         !first_image_paint && !first_contentful_paint && !parse_start &&
+         !parse_stop && !parse_blocked_on_script_load_duration &&
          !parse_blocked_on_script_load_from_document_write_duration;
 }
 
